--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>2025 Christmas letter</title>
+    <title>2025 Christmas letter💌</title>
 
     <!-- 예쁜 폰트 (Google Fonts) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Nanum+Myeongjo:wght@400;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Noto+Serif+KR:wght@400;600;700&display=swap"
         rel="stylesheet">
 
     <style>
@@ -191,8 +190,8 @@
 
     <div class="wrap">
         <header>
-            <h1>2025 Christmas letter</h1>
-            <p class="sub">카드를 클릭해보세요 🎄</p>
+            <h1>2025 Christmas letter💌</h1>
+            <p class="sub">카드를 클릭해보세요🎄</p>
         </header>
 
         <div class="stage">
